# Astreu

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compile.sh  mix.exs
.github/workflows/: elixir.yml  release.yml
astreu/: Dockerfile  Makefile  compile.sh  mix.exs
astreu/.github/workflows/: elixir.yml  release.yml
astreu/config/: config.exs  releases.exs
astreu/docs/: PROTOCOL.md
astreu/docs/diagrams/: subscriber.um
astreu/lib/: astreu.ex
astreu/test/: astreu_test.exs  test_helper.exs
astreu_k8s/: .gitignore  Dockerfile  Makefile  README.md  mix.exs
astreu_k8s/config/: config.exs
astreu_k8s/lib/: astreu_k8s.ex
astreu_k8s/test/: astreu_k8s_test.exs
astreux/: .gitignore  README.md  mix.exs
astreux/lib/: astreux.ex
astreux/test/: astreux_test.exs
config/: config.exs  prod.exs  releases.exs
docs/: PROTOCOL.md
docs/diagrams/: publisher.um
lib/: adapter.ex  application.ex  astreu.ex  endpoint.ex  metrics.ex  node_listener.ex  supervisor.ex
lib/action/: action.ex  wasm_handler.ex
lib/consumer/: consumer_service.ex  subscriber.pb.ex
lib/core/: supervisor.ex
lib/http/: exporter.ex  plug_bootstrap.ex
lib/manager/: manager.pb.ex
lib/persistence/: persistence_adapter.ex
lib/producer/: dispatcher.ex  durable_adapter.ex  producer_service.ex  publisher.pb.ex  transient_adapter.ex
lib/protocol/: protocol.pb.ex  protocol_behaviour.ex
lib/pubsub/: pubsub.ex  pubsub_adapter.ex
lib/queue/: queue_manager.ex
lib/topic/: pubsub_durable_adapter.ex  pubsub_transient_adapter.ex  subscriber_manager.ex  topic_manager.ex
test/: test_helper.exs
test/wasm_test/: Cargo.toml  Makefile  build.rs
test/wasm_test/src/: lib.rs
(+504 files in other folders)
